Entallen boxes to fix layout bug

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ a {
 .tile {
   border-top: 8px solid #343537;
   width: 200px;
-  height: 210px;
+  height: 220px;
   margin: 10px;
   padding: 10px;
   padding-top: 10px;
